@@ -1,3 +1,15 @@
+2008-01-02  Don Porter	<dgp@users.sourceforge.net>
+
+	* generic/tcl.h:	Bump version number to 8.5.1b1 to distinguish
+	* library/init.tcl:	CVS development snapshots from the 8.5.0 and
+	* unix/configure.in:	8.5.1 releases.
+	* unix/tcl.spec:
+	* win/configure.in:
+	* README
+
+	* unix/configure:	autoconf (2.59)
+	* win/configure:
+
 2007-12-31  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/dict.n: Clarified meaning of dictionary values following
